--- a/QlinerApp/QLinerApp.csproj
+++ b/QlinerApp/QLinerApp.csproj
@@ -63,6 +63,7 @@
 		<PackageReference Include="Microsoft.Maui.Graphics.Skia" Version="10.0.10" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.1" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Core" Version="3.119.1" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="System.IO.Ports" Version="10.0.0" />
 	</ItemGroup>
 
